2012-12-03  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: [REGRESSION] [Styles] Rule disappears if edited selector does not affect selected node
        https://bugs.webkit.org/show_bug.cgi?id=103059

        Reviewed by Pavel Feldman.

        This change effectively turns WebInspector.cssModel.setRuleSelector() into a _userOperation
        (in terms of StylesSidebarPane), which finishes upon the _finishOperationAndMoveEditor() invocation.

        * inspector/front-end/CSSStyleModel.js:
        (WebInspector.CSSRule): Fix selectorText now that r136370 has landed.
        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylePropertiesSection.prototype.update): Update the selector text from the model.
        (WebInspector.StylePropertiesSection.prototype._markSelectorMatches): Set the "selector" className regardless of the matched selectors presence.
        (WebInspector.StylePropertiesSection.prototype.successCallback): Make use of the _userOperation flag.
        (WebInspector.StylePropertiesSection.prototype.finishOperationAndMoveEditor): Delete the _userOperation flag.
        (WebInspector.StylePropertiesSection.prototype.editingSelectorCommitted): Make use of the _userOperation flag.
        (WebInspector.BlankStylePropertiesSection.prototype.editingSelectorCommitted): Mark selector matches.
        (WebInspector.BlankStylePropertiesSection.prototype.editingSelectorCancelled): Delete the _userOperation flag.

2012-12-04  Kondapally Kalyan  <kalyan.kondapally@intel.com>

        [EFL][WK2][AC] USE_GRAPHICS_SURFACE should be enabled only if Xcomposite and Xrender extensions are found.
        https://bugs.webkit.org/show_bug.cgi?id=103710.

        Reviewed by Kenneth Rohde Christiansen.

        When using GLX back-end we are dependent on GLX support, Xcomposite and Xrender extensions.
        In this case, GraphicsSurface usage depends on Xcomposite and Xrender extensions. 