@@ -1,3 +1,11 @@
+2012-12-04  Kentaro Hara  <haraken@chromium.org>
+
+        Unreviewed. Rebaselined run-bindings-tests.
+
+        * bindings/scripts/test/JS/JSTestNode.cpp:
+        (WebCore::JSTestNode::visitChildren):
+        (WebCore):
+
 2012-12-03  Alexander Pavlov  <apavlov@chromium.org>
 
         Web Inspector: [REGRESSION] [Styles] Rule disappears if edited selector does not affect selected node
